# DIP_study

./: .clang-format  .gitignore  DIP_study.sln
DIP_pyhon/: test.py
DIP_video/: CMakeLists.txt  dip_video
DIP_video/inc/: bma.hpp  globals.hpp  main.hpp  metric.hpp
DIP_video/src/: main.cpp
DIPannotation/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  main.hpp
DIPannotation/log/: log.txt
DIPweek1/: DIPweek1.vcxproj  DIPweek1.vcxproj.filters  affine.cpp  affine.hpp  basic.cpp  basic.hpp  color.cpp  color.hpp  conv.cpp  conv.hpp  globals.hpp  intensity.cpp  intensity.hpp  main.cpp
DIPweek1/x64/Debug/: vc142.idb
DIPweek1/x64/Debug/DIPweek1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DIPweek1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  (+1 more)
DIPweek1_linux/: CMakeLists.txt  Makefile  cmake_install.cmake  conv.cpp  helper.hpp  main.cpp  main.hpp
DIPweek2-linux/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  conv.cpp  conv.hpp  globals.hpp  helper.hpp  histo.cpp  histo.hpp  intensity.cpp  intensity.hpp  log.txt  main.cpp  main.hpp  mopology.cpp  mopology.hpp
DIPweek2-linux/log/: log.txt
DIPweek3/: CMakeLists.txt  Makefile  ccl.cpp  ccl.hpp  cmake_install.cmake  globals.hpp  helper.cpp  helper.hpp  main.cpp  main.hpp  readme.md  unionfind.cpp  unionfind.hpp
DIPweek3/log/: bench.txt  bench_back.txt  log.txt  log_back.txt  valid.txt
DIPweek4/: CMakeLists.txt  Makefile  config.json  main.cpp  main.hpp  metric.cpp  mind.md
DIPweek4/inc/: bma.hpp  main.hpp  metric.hpp  motion.hpp
DIPweek4/src/: bma.cpp  main.cpp  main_reconst.cpp  metric.cpp  motion.cpp
DIPweek4/srcImg/: test1.tif  test2.tif
test/: CMakeLists.txt  Makefile  a.vsz  aerial_3_hist.eps  aerial_3_hist.vsz  aerial_original.csv  aerial_trans.csv  cmake_install.cmake  color.cpp  color.hpp  histo.cpp  histo.hpp  main.cpp  spine-original.csv  spine-trans.csv  spine_3_hist.vsz
test/dstImg/: color_cube_H.tif  color_cube_I.tif  color_cube_S.tif  color_cube_orig.tif  color_cube_reconst.tif
x64/Debug/: DIPweek1.ilk  DIPweek1.ilk.REMOVED.git-id  DIPweek1.pdb.REMOVED.git-id
x64/Release/: DIPweek1.iobj  DIPweek1.ipdb  DIPweek1.pdb.REMOVED.git-id
(+9 files in other folders)
